Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34891

SST failure occurs when gtid_strict_mode is enabled

    XMLWordPrintable

Details

    Description

      SST failure occurs when gtid_strict_mode is enabled and OLTP load is active on the primary node.

      Error info

      2024-09-06 15:16:03 0 [Note] WSREP: Shifting JOINER -> JOINED (TO: 218950)
      2024-09-06 15:16:03 0 [Note] WSREP: Processing event queue:... 0.0% (0/90729 events) complete.
      2024-09-06 15:16:04 2 [ERROR] mariadbd: Error writing file 'binlog' (errno: 1950 "Unknown error 1950")
      2024-09-06 15:16:04 2 [ERROR] WSREP: Failed to apply write set: gtid: 20146161-6c49-11ef-ab34-3e5b83e9db28:188601 server_id: 20134002-6c49-11ef-bb60-2346bc116142 client_id: 34 trx_id: 3772519 flags: 3 (start_transaction | commit)
      2024-09-06 15:16:04 8 [ERROR] WSREP: Failed to apply write set: gtid: 20146161-6c49-11ef-ab34-3e5b83e9db28:188602 server_id: 20134002-6c49-11ef-bb60-2346bc116142 client_id: 36 trx_id: 3772477 flags: 3 (start_transaction | commit)
      2024-09-06 15:16:04 2 [Note] WSREP: Closing send monitor...
      
      

      Test case

      /home/ramesh/framework/mariadb-10.11.10-linux-x86_64/bin/mariadb-admin --user=root --socket=/home/ramesh/framework/node2/mysql.sock shutdown
      /home/ramesh/framework/mariadb-10.11.10-linux-x86_64/bin/mariadb-admin --user=root --socket=/home/ramesh/framework/node1/mysql.sock shutdown
       
      rm -rf /home/ramesh/framework/node*
       
       
      /home/ramesh/framework/mariadb-10.11.10-linux-x86_64/scripts/mariadb-install-db --no-defaults --force  --auth-root-authentication-method=normal  --basedir=/home/ramesh/framework/mariadb-10.11.10-linux-x86_64 --datadir=/home/ramesh/framework/node1 > /home/ramesh/framework/log/startup1.log 2>&1
       
      /home/ramesh/framework/mariadb-10.11.10-linux-x86_64/scripts/mariadb-install-db --no-defaults --force  --auth-root-authentication-method=normal  --basedir=/home/ramesh/framework/mariadb-10.11.10-linux-x86_64 --datadir=/home/ramesh/framework/node2 > /home/ramesh/framework/log/startup2.log 2>&1
       
       
      /home/ramesh/framework/mariadb-10.11.10-linux-x86_64/bin/mariadbd --defaults-file=/home/ramesh/framework/conf/node1.cnf --wsrep-provider=/home/ramesh/framework/mariadb-10.11.10-linux-x86_64/lib/libgalera_smm.so  --basedir=/home/ramesh/framework/mariadb-10.11.10-linux-x86_64 --wsrep-new-cluster > /home/ramesh/framework/node1/node1.err 2>&1 &
       
      sleep 10
      /home/ramesh/framework/mariadb-10.11.10-linux-x86_64/bin/mariadb --user=root --socket=/home/ramesh/framework/node1/mysql.sock -Bse"SET SESSION sql_log_bin=0;delete from mysql.user where user='';" > /dev/null 2>&1
       
      /home/ramesh/framework/mariadb-10.11.10-linux-x86_64/bin/mariadbd --defaults-file=/home/ramesh/framework/conf/node2.cnf --wsrep-provider=/home/ramesh/framework/mariadb-10.11.10-linux-x86_64/lib/libgalera_smm.so  --basedir=/home/ramesh/framework/mariadb-10.11.10-linux-x86_64  > /home/ramesh/framework/node2/node2.err 2>&1 &
       
      sleep 20
       
      /home/ramesh/framework/mariadb-10.11.10-linux-x86_64/bin/mariadb --user=root --socket=/home/ramesh/framework/node2/mysql.sock -Bse"SET SESSION sql_log_bin=0;delete from mysql.user where user='';" > /dev/null 2>&1
       
      /home/ramesh/framework/mariadb-10.11.10-linux-x86_64/bin/mariadb --user=root --socket=/home/ramesh/framework/node1/mysql.sock -e"create user if not exists sysbench@'localhost' identified  by 'sysbench';grant all on *.* to sysbench@'localhost';" > /dev/null 2>&1
       
      sysbench /usr/share/sysbench/oltp_insert.lua --table-size=1000 --tables=10 --threads=10 --mysql-db=test  --mysql-user=sysbench --mysql-password=sysbench --db-driver=mysql  --mysql-socket=/home/ramesh/framework/node1/mysql.sock prepare >/home/ramesh/framework/log/sysbench_prepare.log
       
      /home/ramesh/framework/mariadb-10.11.10-linux-x86_64/bin/mariadb-admin --user=root --socket=/home/ramesh/framework/node2/mysql.sock shutdown
       
       
      sysbench /usr/share/sysbench/oltp_read_write.lua --table-size=1000 --tables=10 --threads=10 --mysql-db=test  --mysql-user=sysbench --mysql-password=sysbench --db-driver=mysql  --mysql-socket=/home/ramesh/framework/node1/mysql.sock --time=1000 --db-ps-mode=disable run >> /home/ramesh/framework/log/sysbench_read_write_10.log & 
       
       
      rm -rf node2/grastate.dat
       
      sleep 10
       
      /home/ramesh/framework/mariadb-10.11.10-linux-x86_64/bin/mariadbd --defaults-file=/home/ramesh/framework/conf/node2.cnf --wsrep-provider=/home/ramesh/framework/mariadb-10.11.10-linux-x86_64/lib/libgalera_smm.so  --basedir=/home/ramesh/framework/mariadb-10.11.10-linux-x86_64  > /home/ramesh/framework/node2/node2.err 2>&1 &
      
      

      Attachments

        1. n1.cnf
          1.0 kB
        2. n2.cnf
          1.0 kB
        3. node2.err
          28 kB

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              ramesh Ramesh Sivaraman
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 3.6d Original Estimate - 3.6d
                  3.6d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 6d 4.75h
                  6d 4.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.